brat/test/golden/error/vectorise-too-greedy.brat
f :: Vec(Nat, 42), Vec(Bool, 42)
f = 42 of 1, 42 of true
